# GimbalScout

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: download_tools.ps1
src/: analyzer.rs  cache.rs  config.rs  engine.rs  error.rs  gui.rs  main.rs  media.rs  settings.rs  timeline.rs  xml_exporter.rs
src/analyzer/: detector.rs  motion.rs  tests.rs
