[package]
name = "video-tool"
version = "0.1.0"
edition = "2024"

[features]
# Zero-config: embed local assets and run YOLO on the CPU by default.
# GPU providers are opt-in because their runtime DLLs must be packaged correctly.
default = ["embedded-assets", "yolo"]

embedded-assets = ["dep:rust-embed"]
yolo = ["dep:ort", "dep:ndarray"]

# GPU execution providers are additive.
# Enable extras with e.g. `cargo build --features directml`.
directml = ["yolo", "ort/directml"]
cuda     = ["yolo", "ort/cuda"]
tensorrt = ["yolo", "ort/tensorrt"]
coreml   = ["yolo", "ort/coreml"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
quick-xml = "0.36.1"
urlencoding = "2.1.3"
eframe = "0.29.1"
rfd = "0.15.0"

ort = { version = "=2.0.0-rc.12", optional = true }
ndarray = { version = "0.17.2", optional = true }
rust-embed = { version = "8.5.0", optional = true }
sha2 = "0.10.8"
